--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MSSQL_CONNECTION_STR="SERVER=localhost,1433;DATABASE=master;UID=sa;PWD=Str0ngP@ssw0rd!;Encrypt=no;TrustServerCertificate=yes;"
+MSSQL_MASTER_CONNECTION_STR="SERVER=localhost,1433;DATABASE=master;UID=sa;PWD=Str0ngP@ssw0rd!;Encrypt=no;TrustServerCertificate=yes;"
+MSSQL_DW_CONNECTION_STR="SERVER=localhost,1433;DATABASE=SalesDataWarehouse;UID=sa;PWD=Str0ngP@ssw0rd!;Encrypt=no;TrustServerCertificate=yes;"
